<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/top_margin"
            android:fontFamily="@font/green_avocado"
            android:text="@string/title"
            android:textAlignment="center"
            android:textColor="@color/quastionsColor"
            android:textSize="@dimen/text_size_title"
            android:textStyle="bold" />

        <!--The legend with lines above and below the legend-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/top_margin_quastions"
            android:layout_marginEnd="@dimen/left_margin_quastions"
            android:layout_marginLeft="@dimen/left_margin_quastions"
            android:layout_marginRight="@dimen/right_margin_quastions"
            android:layout_marginStart="@dimen/left_margin_quastions"
            android:layout_marginTop="@dimen/left_margin_answers"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/line_thickness"
                android:layout_marginBottom="@dimen/padding_button_bottom"
                android:background="@color/quastionsColor" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/line_thickness"
                android:layout_marginBottom="@dimen/padding_button_bottom"
                android:background="@color/quastionsColor" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_legend_left_image"
                    android:layout_marginStart="@dimen/margin_legend_left_image"
                    android:src="@drawable/bombka_mala_zlota" />

                <TextView
                    style="@style/Legend"
                    android:paddingLeft="@dimen/margin_between_draw_answers"
                    android:paddingStart="@dimen/margin_between_draw_answers"
                    android:text="@string/bauble" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_legend_right_image"
                    android:layout_marginStart="@dimen/margin_legend_right_image"
                    android:src="@drawable/prezent_zloty_zielony" />

                <TextView
                    style="@style/Legend"
                    android:paddingLeft="@dimen/margin_between_draw_answers"
                    android:paddingStart="@dimen/margin_between_draw_answers"
                    android:text="@string/gift" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/top_margin_quastions"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/left_margin_answers"
                    android:layout_marginStart="@dimen/left_margin_answers"
                    android:src="@drawable/lancuch_maly" />

                <TextView
                    style="@style/Legend"
                    android:paddingLeft="@dimen/margin_between_draw_answers_bigger"
                    android:paddingStart="@dimen/margin_between_draw_answers_bigger"
                    android:text="@string/chain" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/line_thickness"
                android:layout_marginTop="@dimen/margin_between_draw_answers"
                android:background="@color/quastionsColor" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/line_thickness"
                android:layout_marginTop="@dimen/padding_button_bottom"
                android:background="@color/quastionsColor" />

        </LinearLayout>

        <!--Questions with answers-->
        <TextView
            android:id="@+id/questionAdvent"
            style="@style/Question"
            android:text="@string/quastion_advent" />


        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/rgAdvent"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/ans1Advent"
                style="@style/CheckBoxRadioButton"
                android:layout_width="wrap_content"
                android:layout_marginLeft="@dimen/left_margin_answers"
                android:button="@drawable/radiodraw"
                android:text="@string/ans1_advent" />

            <RadioButton
                android:id="@+id/ans2Advent"
                style="@style/CheckBoxRadioButton"
                android:layout_width="wrap_content"
                android:layout_marginLeft="@dimen/left_margin_answers"
                android:button="@drawable/radiodraw"
                android:text="@string/ans2_advent" />

            <RadioButton
                android:id="@+id/ans3Advent"
                style="@style/CheckBoxRadioButton"
                android:layout_width="wrap_content"
                android:layout_marginLeft="@dimen/left_margin_answers"
                android:button="@drawable/radiodraw"
                android:text="@string/ans3_advent" />

            <RadioButton
                android:id="@+id/ans4Advent"
                style="@style/CheckBoxRadioButton"
                android:layout_width="wrap_content"
                android:layout_marginLeft="@dimen/left_margin_answers"
                android:button="@drawable/radiodraw"
                android:text="@string/ans4_advent" />
        </RadioGroup>


        <TextView
            android:id="@+id/question_wafer_multi"
            style="@style/Question"
            android:text="@string/quastion_wafer" />


        <CheckBox
            android:id="@+id/ans1_wafer_checkBox"
            style="@style/CheckBoxRadioButton"
            android:layout_width="wrap_content"
            android:layout_marginLeft="@dimen/left_margin_answers"
            android:button="@drawable/checkbox"
            android:text="@string/ans1_wafer" />

        <CheckBox
            android:id="@+id/ans2_wafer_checkBox"
            style="@style/CheckBoxRadioButton"
            android:layout_width="wrap_content"
            android:layout_marginLeft="@dimen/left_margin_answers"
            android:button="@drawable/checkbox"
            android:text="@string/ans2_wafer" />

        <CheckBox
            android:id="@+id/ans3_wafer_checkBox"
            style="@style/CheckBoxRadioButton"
            android:layout_width="wrap_content"
            android:layout_marginLeft="@dimen/left_margin_answers"
            android:button="@drawable/checkbox"
            android:text="@string/ans3_wafer" />

        <CheckBox
            android:id="@+id/ans4_wafer_checkBox"
            style="@style/CheckBoxRadioButton"
            android:layout_width="wrap_content"
            android:layout_marginLeft="@dimen/left_margin_answers"
            android:button="@drawable/checkbox"
            android:text="@string/ans4_wafer" />


        <TextView
            android:id="@+id/questionTree"
            style="@style/Question"
            android:text="@string/quastion_tree" />


        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/rgTree"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/ans1Tree"
                style="@style/CheckBoxRadioButton"
                android:layout_width="wrap_content"
                android:layout_marginLeft="@dimen/left_margin_answers"
                android:button="@drawable/radiodraw"
                android:text="@string/ans1_tree" />

            <RadioButton
                android:id="@+id/ans2Tree"
                style="@style/CheckBoxRadioButton"
                android:layout_width="wrap_content"
                android:layout_marginLeft="@dimen/left_margin_answers"
                android:button="@drawable/radiodraw"
                android:text="@string/ans2_tree" />

            <RadioButton
                android:id="@+id/ans3Tree"
                style="@style/CheckBoxRadioButton"
                android:layout_width="wrap_content"
                android:layout_marginLeft="@dimen/left_margin_answers"
                android:button="@drawable/radiodraw"
                android:text="@string/ans3_tree" />

            <RadioButton
                android:id="@+id/ans4Tree"
                style="@style/CheckBoxRadioButton"
                android:layout_width="wrap_content"
                android:layout_marginLeft="@dimen/left_margin_answers"
                android:button="@drawable/radiodraw"
                android:text="@string/ans4_tree" />
        </RadioGroup>


        <TextView
            android:id="@+id/questionSaintNicolas"
            style="@style/Question"
            android:text="@string/quastion_saintNicolas" />


        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/rgSaintNicolas"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/ans1saintNicolas"
                style="@style/CheckBoxRadioButton"
                android:layout_width="wrap_content"
                android:layout_marginLeft="@dimen/left_margin_answers"
                android:button="@drawable/radiodraw"
                android:text="@string/ans1_saintNicolas" />

            <RadioButton
                android:id="@+id/ans2saintNicolas"
                style="@style/CheckBoxRadioButton"
                android:layout_width="wrap_content"
                android:layout_marginLeft="@dimen/left_margin_answers"
                android:button="@drawable/radiodraw"
                android:text="@string/ans2_saintNicolas" />

            <RadioButton
                android:id="@+id/ans3saintNicolas"
                style="@style/CheckBoxRadioButton"
                android:layout_width="wrap_content"
                android:layout_marginLeft="@dimen/left_margin_answers"
                android:button="@drawable/radiodraw"
                android:text="@string/ans3_saintNicolas" />

            <RadioButton
                android:id="@+id/ans4saintNicolas"
                style="@style/CheckBoxRadioButton"
                android:layout_width="wrap_content"
                android:layout_marginLeft="@dimen/left_margin_answers"
                android:button="@drawable/radiodraw"
                android:text="@string/ans4_saintNicolas" />
        </RadioGroup>


        <TextView
            android:id="@+id/question_SCLapland_multi"
            style="@style/Question"
            android:text="@string/quastion_SCLapland" />

        <EditText
            android:id="@+id/editText_SCLapland"
            style="@style/EditText"
            android:hint="@string/empty_EditText" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/left_margin_answers"
            android:src="@drawable/lancuch_maly" />


        <TextView
            android:id="@+id/question_SChelp_multi"
            style="@style/Question"
            android:text="@string/quastion_SChelp" />

        <EditText
            android:id="@+id/editText_SChelp"
            style="@style/EditText"
            android:hint="@string/empty_EditText" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/left_margin_answers"
            android:layout_marginStart="@dimen/left_margin_answers"
            android:src="@drawable/lancuch_maly" />


        <TextView
            android:id="@+id/question_crib_multi"
            style="@style/Question"
            android:text="@string/quastion_crib" />


        <CheckBox
            android:id="@+id/ans1_crib_checkBox"
            style="@style/CheckBoxRadioButton"
            android:layout_width="wrap_content"
            android:layout_marginLeft="@dimen/left_margin_answers"
            android:button="@drawable/checkbox"
            android:text="@string/ans1_crib" />

        <CheckBox
            android:id="@+id/ans2_crib_checkBox"
            style="@style/CheckBoxRadioButton"
            android:layout_width="wrap_content"
            android:layout_marginLeft="@dimen/left_margin_answers"
            android:button="@drawable/checkbox"
            android:text="@string/ans2_crib" />

        <CheckBox
            android:id="@+id/ans3_crib_checkBox"
            style="@style/CheckBoxRadioButton"
            android:layout_width="wrap_content"
            android:layout_marginLeft="@dimen/left_margin_answers"
            android:button="@drawable/checkbox"
            android:text="@string/ans3_crib" />

        <CheckBox
            android:id="@+id/ans4_crib_checkBox"
            style="@style/CheckBoxRadioButton"
            android:layout_width="wrap_content"
            android:layout_marginLeft="@dimen/left_margin_answers"
            android:button="@drawable/checkbox"
            android:text="@string/ans4_crib" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/left_margin_answers"
            android:layout_marginRight="@dimen/left_margin_answers"
            android:layout_marginTop="@dimen/top_margin_quastions"
            android:orientation="horizontal">

            <!--Button couting points-->
            <Button
                android:id="@+id/button_result"
                style="@style/Buttons"
                android:background="@drawable/gradient"
                android:onClick="buttonResult"
                android:text="@string/button_result"
                android:textColor="@color/background" />

            <!--Butoon reseting all answers-->
            <Button
                android:id="@+id/button_try_again"
                style="@style/Buttons"
                android:background="@drawable/gradient"
                android:onClick="buttonTryAgain"
                android:text="@string/button_try_again"
                android:textColor="@color/background" />


        </LinearLayout>


    </LinearLayout>

</ScrollView>